--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
    <div class="container" id="app">
-        <div class="items">
-            <div class="item" @click="set">
+        <div class="items" @mouseover = "pause(hover = true)" @mouseleave = "pause(hover = false)">
+            <div class="item">
                 <img :src="items[active].url" alt="">
                 <div class="text">
                     <h1>{{items[active].name}}</h1>
@@ -20,10 +20,10 @@
         </div>
         <div class="thumbs">
 
-            <div class="prev" @click="prev"></div>
-            <div class="next" @click="next"></div>
+            <div class="prev" @click="prevSlide()"></div>
+            <div class="next" @click="nextSlide()"></div>
             
-            <div class="thumb" :class="indice == active ? 'active':'' " v-for="(items, indice) in items">
+            <div class="thumb" :class="indice == active ? 'active' : '' " v-for="(items, indice) in items">
                 <img :src="items.url" alt="">
             </div>
         </div>
